[tool.poetry]
name = "CatGPT Backend"
version = "0.1.0"
description = ""
authors = ["CatGPT"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
openai = "^1.54.3"
requests = "^2.32.3"
structlog = "^24.4.0"
supabase = "^2.10.0"
langchain-community = "^0.3.5"
sentence-transformers = "^3.2.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"